fixing overflow and main animation

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+html,
+body {
   @apply overflow-x-hidden scroll-smooth;
 }
 
